<resources>
    <string name="app_name">Fant Application</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">No user? Register now!</string>
    <string name="logout">Logout</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Sign in</string>
    <string name="email">Email ...</string>
    <string name="password">Password ...</string>
    <string name="register_now">Register Now!</string>
    <string name="already_signed_up_log_in">Already signed up? Log in!</string>
    <string name="fant_application">Fant application</string>
    <string name="items_for_sale">Items for sale</string>

    <string name="title">Title</string>
    <string name="images">Images</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <!-- Buttons -->
    <string name="buynow">Buy Now</string>
    <string name="addItem">Add Item</string>
    <string name="addImage">Add Image</string>
    <string name="Cancel">Cancel</string>
</resources>